after lunch to google play

--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=0560855276ZooZ
 keyPassword=0560855276ZooZ
 keyAlias=key
-storeFile=‪C:\Users\huawei-pc\project keys\CineMekey.jks
+storeFile=C:\\Users\\huawei-pc\\key.jks
